Fix bullet chart color scheme
https://seedscientific.atlassian.net/browse/POLIO-344

- Add a computed property that calculates whether the up or down status should
  be applied
- Fix an error in the CSS that was missing statuses on the value bar
- Fix a bug calculating the scale for the marker placement that was causing
  the markers to be placed too far to the left

--- a/ui/styles/_charts.scss
+++ b/ui/styles/_charts.scss
@@ -194,10 +194,11 @@ svg {
 .down {
 	h6 {
 		color: $down-color;
+		font-weight: bold;
 	}
 
 	.bullet {
-		svg.value,
+		.value,
 		.marker {
 			fill: $down-color;
 		}
